[gd_scene load_steps=10 format=3 uid="uid://ct4l808ib7i8p"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_fnbe8"]
[ext_resource type="Script" path="res://scripts/panned_camera.gd" id="2_krtgi"]
[ext_resource type="Shader" path="res://shaders/dm_shader.gdshader" id="3_fvqp8"]
[ext_resource type="Script" path="res://scripts/drawing_node.gd" id="3_iu72d"]
[ext_resource type="Texture2D" uid="uid://bxwdhua5sspow" path="res://resources/Fog.jpg" id="4_ak8k0"]
[ext_resource type="Shader" path="res://shaders/player_shader.gdshader" id="5_v4wp5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xsao3"]
resource_local_to_scene = true
shader = ExtResource("3_fvqp8")

[sub_resource type="LabelSettings" id="LabelSettings_womdi"]
font_size = 19
outline_size = 1
outline_color = Color(0.103744, 0.103744, 0.103744, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrpuh"]
shader = ExtResource("5_v4wp5")

[node name="Root" type="Control"]
z_index = 6
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fnbe8")

[node name="DmFog" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_xsao3")
layout_mode = 0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("4_ak8k0")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Warning" type="AcceptDialog" parent="."]
force_native = true

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_krtgi")

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
dialog_hide_on_ok = true
access = 2
use_native_dialog = true

[node name="DrawingViewport" type="SubViewport" parent="."]
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="DrawingNode" type="Node2D" parent="DrawingViewport"]
z_index = 1
script = ExtResource("3_iu72d")

[node name="DrawingTexture" type="TextureRect" parent="DrawingViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MenuBar" type="MenuBar" parent="GUI"]
top_level = true
offset_right = 40.0
offset_bottom = 40.0

[node name="File" type="PopupMenu" parent="GUI/MenuBar"]
prefer_native_menu = true
item_count = 4
item_0/text = "Load"
item_1/text = "Save"
item_1/id = 1
item_2/text = "Help"
item_2/id = 2
item_3/text = "Exit"
item_3/id = 3

[node name="Colorscheme" type="PopupMenu" parent="GUI/MenuBar"]
auto_translate_mode = 1
title = "Hello"
prefer_native_menu = true
item_count = 8
item_0/text = "Fog"
item_0/checkable = 2
item_0/checked = true
item_1/text = "Colorful fog"
item_1/checkable = 2
item_1/id = 1
item_2/text = "Black"
item_2/checkable = 2
item_2/id = 2
item_3/text = "White"
item_3/checkable = 2
item_3/id = 3
item_4/text = "Gray"
item_4/checkable = 2
item_4/id = 4
item_5/text = "Fuchsia"
item_5/checkable = 2
item_5/id = 5
item_6/text = "Blue"
item_6/checkable = 2
item_6/id = 6
item_7/text = "Lime"
item_7/checkable = 2
item_7/id = 7

[node name="Settings" type="PopupMenu" parent="GUI/MenuBar"]
auto_translate_mode = 1
prefer_native_menu = true
item_count = 3
item_0/text = "Black Indicator Color (C to toggle)"
item_0/checkable = 1
item_1/text = "Square Brush (Space to toggle)"
item_1/checkable = 1
item_1/id = 1
item_2/text = "Limit FPS (P to toggle)"
item_2/checkable = 1
item_2/id = 2

[node name="SavingLabel" type="Label" parent="GUI"]
visible = false
offset_left = 233.0
offset_right = 324.0
offset_bottom = 28.0
text = "Saving . . ."
label_settings = SubResource("LabelSettings_womdi")

[node name="DmRoot" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="DmRoot"]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerWindow" type="Window" parent="."]
title = "Player Window"
initial_position = 2
size = Vector2i(800, 500)

[node name="Camera" type="Camera2D" parent="PlayerWindow"]
script = ExtResource("2_krtgi")

[node name="PlayerRoot" type="Node2D" parent="PlayerWindow"]

[node name="Background" type="TextureRect" parent="PlayerWindow/PlayerRoot"]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerFog" type="TextureRect" parent="PlayerWindow"]
visible = false
material = SubResource("ShaderMaterial_lrpuh")
offset_right = 256.0
offset_bottom = 256.0
texture = ExtResource("4_ak8k0")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CursorNode" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="CursorNode"]
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
